cmake_minimum_required(VERSION 3.24)
project(FP1 C)

set(CMAKE_C_STANDARD 17)

add_executable(FP1 main.c Part3/main.c Part1/1/main.c Part1/2/main.c Part1/3/main.c Part1/4/Circumference/main.c Part1/4/Rectangle/main.c Part1/4/Triangle/main.c Part1/5/main.c Part2/1/main.c Part2/2/main.c Part2/3/main.c Part2/4/main.c)
