cmake_minimum_required(VERSION 3.24)
project(FP5 C)

set(CMAKE_C_STANDARD 17)

add_executable(FP5 main.c Part1/1/main.c Part1/2/main.c Part1/3/main.c Part1/4/main.c Part1/5/main.c Part1/3/intLib.c Part1/3/intLib.h Part2/1/main.c Part2/2/main.c Part2/2/intLib.c Part2/2/intLib.h Part2/3/main.c Part2/3/intLib.c Part2/3/intLib.h Part2/4/main.c Part2/4/intLib.c Part2/4/intLib.h Part2/5/main.c Part2/5/intLib.c Part2/5/intLib.h Part2/5/menu.c Part2/5/menu.h)
